--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <main class="main">
-  <div class="logo-container">
+  <div class="logo-container fade-in">
     <img class="logo" src="images/lolgolevel.png" alt="logo">
     <p class="undertext">Uskoro</p>
   </div>
