--- a/src/styles.scss
+++ b/src/styles.scss
@@ -25,3 +25,17 @@ body{
     align-items: center;
     justify-content: center;
 }
+
+.fade-in {
+    animation: fadeIn 0.5s ease-in forwards;
+}
+
+@keyframes fadeIn {
+    0% {
+      opacity: 0;
+    }
+    100% {
+      opacity: 1;
+    }
+  }
+  
