--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <main class="main">
   <div class="logo-container fade-in">
-    <img class="logo" src="images/lolgolevel.png" alt="logo">
+    <img class="logo" src="images/LevelSuplementiLogoBeli.png" alt="logo">
     <p class="undertext">Uskoro</p>
   </div>
 </main>
