--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,5 +1,6 @@
 
 .logo-container {
+    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -12,11 +13,14 @@
     width: 100%; 
     max-width: 250px;
     height: auto;
+    img{
+      width: 100%;
+    }
   }
   
   .undertext {
     margin-top: 10px;
-    font-size: 2rem;
+    font-size: 1.5rem;
     font-weight: bold;
     color: #333;
   }
