--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,7 +5,7 @@ $white: rgb(255, 255, 255);
 
 @font-face {
     font-family: "level-fitness-italic";
-    src: url("../public/fonts/NTF-Grand-Italic.otf");
+    src: url("../public/fonts/norwester.otf");
 }
 
 *{
