--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <main class="main">
   <div class="logo-container fade-in">
-    <img class="logo" src="images/LilaPozadina.png" alt="logo">
-    <p class="undertext">Uskoro</p>
+    <img class="logo" src="images/LilaPozadinaCopy.png" alt="logo">
+    <p class="undertext">USKORO</p>
   </div>
 </main>
 
