--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -3,40 +3,38 @@
     width: 100%;
     display: flex;
     flex-direction: column;
-    align-items: center;
     justify-content: center;
+    align-items: center;
     padding: 20px;
     text-align: center;
   }
   
   .logo {
-    width: 100%; 
-    max-width: 250px;
+    width: 50%; 
+    margin: 0px auto;
   }
   
   .undertext {
     margin-top: 10px;
-    font-size: 1.5rem;
-    font-weight: bold;
+    font-size: 1.8rem;
     color: #333;
+    letter-spacing: 0.1cm;
   }
   
   @media (max-width: 768px) {
     .logo {
-      max-width: 200px; 
+      width: 70%; 
     }
-  
     .undertext {
-      font-size: 1.2rem; 
+      font-size: 1.5rem !important; 
     }
   }
   
   @media (max-width: 480px) {
     .logo {
-      max-width: 150px;
+      width: 90%; 
     }
-  
     .undertext {
-      font-size: 1rem; 
+      font-size: 1rem !important; 
     }
   }
